--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -16,6 +16,7 @@
 
   @include media("mobile") {
     font-size: rem(20);
+    width: 100px;
   }
 
   &_type {
